# urban-engine

./: .gitignore  CMakeLists.txt  Linux.sh  README.md  Run.bat  Run.sh  Win.bat
Editor/: CMakeLists.txt
Editor/Resources/: FinalBaseMesh.fbx  Hip Hop Dancing.fbx  Silly Dancing.fbx
Editor/Resources/Animations/: Idle.fbx  Jump.fbx  Running.fbx
Editor/Resources/Cards/Backgrounds/: background_1.png.import  background_2.png.import  background_3.png.import
Editor/Resources/Cards/Characters/: char_1.png.import  char_10.png.import  char_11.png.import  char_12.png.import  char_13.png.import  char_2.png.import  char_3.png.import  char_4.png.import  char_5.png.import  char_6.png.import  char_7.png.import  char_8.png.import  char_9.png.import  frame_circle.png.import  frame_quad.png.import
Editor/Resources/Cards/Standard/rect_cards/individual/club/: 10club.png.import  2club.png.import  3club.png.import  4club.png.import  5club.png.import  6club.png.import  7club.png.import  8club.png.import  9club.png.import  Aclub.png.import  Jclub.png.import  Kclub.png.import  Q.png.import
Editor/Resources/Cards/Standard/rect_cards/individual/diamond/: 10diamond.png.import  2diamond.png.import  3diamond.png.import  4diamond.png.import  5diamond.png.import  6diamond.png.import  7diamond.png.import  8diamond.png.import  9diamond.png.import  Adiamond.png.import  Jdiamond.png.import  Kdiamond.png.import  Qdiamond.png.import
Editor/Resources/Cards/Standard/rect_cards/individual/heart/: 10heart.png.import  2heart.png.import  3heart.png.import  4heart.png.import  5heart.png.import  6heart.png.import  7heart.png.import  8heart.png.import  9heart.png.import  Aheart.png.import  Jheart.png.import  Kheart.png.import  Qheart.png.import
Editor/Resources/Cards/Standard/rect_cards/individual/spade/: 10spade.png.import  2spade.png.import  3spade.png.import  4spade.png.import  5spade.png.import  6spade.png.import  7spade.png.import  8spade.png.import  9spade.png.import  Aspade.png.import  Jspade.png.import  Kspade.png.import  Qspade.png.import
Editor/Resources/Cards/Standard/solitaire/: all_cards.png.import
Editor/Resources/Cards/Standard/solitaire/individuals/card_back/: card_back.png.import
Editor/Resources/Cards/Standard/solitaire/individuals/club/: 10_club.png.import  11_club.png.import  12_club.png.import  13_club.png.import  1_club.png.import  2_club.png.import  3_club.png.import  4_club.png.import  5_club.png.import  6_club.png.import  7_club.png.import  8_club.png.import  9_club.png.import
Editor/Resources/Cards/Standard/solitaire/individuals/diamond/: 10_diamond.png.import  11_diamond.png.import  12_diamond.png.import  13_diamond.png.import  1_diamond.png.import  2_diamond.png.import  3_diamond.png.import  4_diamond.png.import  5_diamond.png.import  6_diamond.png.import  7_diamond.png.import  8_diamond.png.import  (+1 more)
Editor/Resources/Cards/Tables/: table_blue.png.import  table_green.png.png.import  table_red.png.import
Editor/Resources/Cards/Uno/: uno_cards.png.import
Editor/Resources/Cards/Uno/individual/blue/: 0_blue.png.import  1_blue.png.import  2_blue.png.import  2plus_blue.png.import  3_blue.png.import  4_blue.png.import  5_blue.png.import  6_blue.png.import  7_blue.png.import  8_blue.png.import  9_blue.png.import  block_blue.png.import  inverse_blue.png.import
Editor/Resources/Cards/Uno/individual/card back/: card_back.png.import
Editor/Resources/Cards/Uno/individual/green/: 0_green.png.import  1_green.png.import  2_green.png.import  2plus_green.png.import  3_green.png.import  4_green.png.import  5_green.png.import  6_green.png.import  7_green.png.import  8_green.png.import  9_green.png.import  block_green.png.import  inverse_green.png.import
Editor/Resources/Cards/Uno/individual/red/: 0_red.png.import  1_red.png.import  2_red.png.import  2plus_red.png.import  3_red.png.import  4_red.png.import  5_red.png.import  6_red.png.import  7_red.png.import  8_red.png.import  9_red.png.import  block_red.png.import  inverse_red.png.import
Editor/Resources/Cards/Uno/individual/wild/: 4_plus.png.import  wild_card.png.import
Editor/Resources/Cards/Uno/individual/yellow/: 0_yellow.png.import  1_yellow.png.import  2_yellow.png.import  2plus_yellow.png.import  3_yellow.png.import  4_yellow.png.import  5_yellow.png.import  6_yellow.png.import  7_yellow.png.import  8_yellow.png.import  9_yellow.png.import  block_yellow.png.import  inverse_yellow.png.import
Editor/Resources/Scenes/: Floor.UE  ImguiSaveTest.UE  TestingPhysics.UE  sponza.UE  testShape.UE
Editor/Resources/blendertes/: untitled.fbx
Editor/include/: EditorApp.h  EditorLayer.h
Editor/include/ImGui/: Console.h
Editor/include/Panels/: ContentBrowserPanel.h  SceneHierarchyPanel.h
Editor/src/: Console.cpp  ContentBrowserPanel.cpp  EditorLayer.cpp  SceneHierarchyPanel.cpp  main.cpp
Engine/: CMakeLists.txt
Engine/include/: uepch.h
Engine/include/Auxiliaries/: PlatformUtils.h
Engine/include/Core/: Config.h  EntryPoint.h  ImGuiLayer.h  Input.h  KeyCodes.h  Layer.h  LayerStack.h  Window.h
Engine/include/Debug/: Instrumentor.h
Engine/include/Events/: ApplicationEvent.h  KeyEvent.h  MouseEvent.h
Engine/include/Platform/OpenGl/: OpenGLFramebuffer.h  OpenGLRendererAPI.h  OpenGLShader.h
Engine/include/Renderer/: Buffer.h  Camera.h  Camera3D.h  EditorCamera.h  Mesh.h  Model.h  RenderCommand.h  Renderer2D.h  Renderer3D.h  Shader.h  VertexArray.h
Engine/include/Renderer/Animation/: Animation.h  Bone.h
Engine/include/Scene/: Components.h  Entity.h  Scene.h  SceneSerializer.h
Engine/src/Core/: Application.cpp  ImGuiLayer.cpp  LayerStack.cpp  Log.cpp  Window.cpp
Engine/src/Platfrom/OpenGl/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLFramebuffer.cpp  OpenGLShader.cpp  OpenGLSkybox.cpp  OpenGLTexture.cpp  OpenGLUniformBuffer.cpp  OpenGLVertexArray.cpp
Engine/src/Renderer/: Animation.cpp  Animator.cpp  Camera.cpp  EditorCamera.cpp  Framebuffer.cpp  Model.cpp  RenderAPI.cpp  RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  Renderer3D.cpp  Skybox.cpp
Engine/src/Scene/: Entity.cpp  Scene.cpp  SceneCamera.cpp
(+145 files in other folders)
